--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,10 @@
 <html>
 
 <head>
-    <title>Card template</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="/stylesheets/card.css">
+    <title>Oracle</title>
 </head>
 
 <body>
-    <div class="card__wrapper">
-        <div class="card__container">
-
-            <div class="color__container">
-                <div class="color__name">
-                    <span></span>
-                </div>
-                <div class="color__hex">
-                    <span></span>
-                </div>
-            </div>
-
-            <div class="poem__container">
-                <div class="poem__inner">
-                    <span class="poem__text">
-                    </span>
-                </div>
-            </div>
-
-            <div class="title__container">
-                <div class="title__text">
-                    <span>DELPHI</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const parameterValueFromRoute = '<%= param %>';
-        console.log(parameterValueFromRoute);
-    </script>
-    <script type="module" src="/js/index.js"></script>
 </body>
 
 </html>
